kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: solar-system
  name: solar-system
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: solar-system
  strategy: {}
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      containers:
      - image: dts81/solar-system:<commit-sha>
        imagePullPolicy: Always
        name: solar-system
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
  - name: MONGO_URI
    valueFrom:
      secretKeyRef:
        name: mongo-db-creds
        key: MONGO_URI
  - name: MONGO_USERNAME
    valueFrom:
      secretKeyRef:
        name: mongo-db-creds
        key: MONGO_USERNAME
  - name: MONGO_PASSWORD
    valueFrom:
      secretKeyRef:
        name: mongo-db-creds
        key: MONGO_PASSWORD
